# news-aggregator

./: .gitignore  README.md  config.yaml  pyproject.toml  sources.yaml
.claude/: settings.local.json
.claude/routines/: news-digest.md
aggregator/: article.py  cli.py  deepen.py  digest.py  expand.py  fetch.py  notify.py  store.py  youtube.py
scripts/: routine-entry.sh
state/: seen.sqlite
state/runs/2026-04-19/: digest.md
state/runs/2026-04-27/: deepen_plan.json  deepened.jsonl  digest.md  items.jsonl  trending_expanded.jsonl  triage.json
state/runs/2026-04-27/sections/: c1.md  c2.md  c3.md  c4.md  c5.md  c6.md
